# aoc-2025

./: CMakeLists.txt  conanfile.txt
days/: CMakeLists.txt  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day10.cpp  Days.hpp  Helpers.h  LongInt.h
src/: main.cpp
